edit: add new icons & enhance demo page fix: use padding instead of overflow: hidden on app-body to avoid children's top/bottom margin issue

--- a/assets/css/icomoon/_icons.scss
+++ b/assets/css/icomoon/_icons.scss
@@ -20,286 +20,351 @@
 }
 .icon-smartphone {
   &:before {
-    content: $icon-smartphone;
+    content: $icon-smartphone; 
+  }
+}
+.icon-paint {
+  &:before {
+    content: $icon-paint; 
   }
 }
 .icon-laptop {
   &:before {
-    content: $icon-laptop;
+    content: $icon-laptop; 
   }
 }
 .icon-desktop {
   &:before {
-    content: $icon-desktop;
+    content: $icon-desktop; 
   }
 }
 .icon-security {
   &:before {
-    content: $icon-security;
+    content: $icon-security; 
   }
 }
 .icon-tablet {
   &:before {
-    content: $icon-tablet;
+    content: $icon-tablet; 
   }
 }
 .icon-rotate-right {
   &:before {
-    content: $icon-rotate-right;
+    content: $icon-rotate-right; 
   }
 }
 .icon-travel-bus {
   &:before {
-    content: $icon-travel-bus;
+    content: $icon-travel-bus; 
   }
 }
 .icon-travel-car {
   &:before {
-    content: $icon-travel-car;
+    content: $icon-travel-car; 
   }
 }
 .icon-gas-station {
   &:before {
-    content: $icon-gas-station;
+    content: $icon-gas-station; 
   }
 }
 .icon-cart {
   &:before {
-    content: $icon-cart;
+    content: $icon-cart; 
   }
 }
 .icon-hospital {
   &:before {
-    content: $icon-hospital;
+    content: $icon-hospital; 
+  }
+}
+.icon-store {
+  &:before {
+    content: $icon-store; 
   }
 }
 .icon-food {
   &:before {
-    content: $icon-food;
+    content: $icon-food; 
   }
 }
 .icon-ev-station {
   &:before {
-    content: $icon-ev-station;
+    content: $icon-ev-station; 
+  }
+}
+.icon-train {
+  &:before {
+    content: $icon-train; 
   }
 }
 .icon-fastfood {
   &:before {
-    content: $icon-fastfood;
+    content: $icon-fastfood; 
   }
 }
 .icon-cake {
   &:before {
-    content: $icon-cake;
+    content: $icon-cake; 
   }
 }
 .icon-earth {
   &:before {
-    content: $icon-earth;
+    content: $icon-earth; 
   }
 }
 .icon-bank {
   &:before {
-    content: $icon-bank;
+    content: $icon-bank; 
   }
 }
 .icon-wallet {
   &:before {
-    content: $icon-wallet;
+    content: $icon-wallet; 
   }
 }
 .icon-credit-card {
   &:before {
-    content: $icon-credit-card;
+    content: $icon-credit-card; 
   }
 }
 .icon-gift {
   &:before {
-    content: $icon-gift;
+    content: $icon-gift; 
+  }
+}
+.icon-flight-takeoff {
+  &:before {
+    content: $icon-flight-takeoff; 
   }
 }
 .icon-gavel {
   &:before {
-    content: $icon-gavel;
+    content: $icon-gavel; 
   }
 }
 .icon-pets {
   &:before {
-    content: $icon-pets;
+    content: $icon-pets; 
   }
 }
 .icon-cases {
   &:before {
-    content: $icon-cases;
+    content: $icon-cases; 
   }
 }
 .icon-housing {
   &:before {
-    content: $icon-housing;
+    content: $icon-housing; 
   }
 }
 .icon-gaming {
   &:before {
-    content: $icon-gaming;
+    content: $icon-gaming; 
   }
 }
 .icon-clothes {
   &:before {
-    content: $icon-clothes;
+    content: $icon-clothes; 
   }
 }
 .icon-hammer {
   &:before {
-    content: $icon-hammer;
+    content: $icon-hammer; 
   }
 }
 .icon-nightlife {
   &:before {
-    content: $icon-nightlife;
+    content: $icon-nightlife; 
   }
 }
 .icon-donation {
   &:before {
-    content: $icon-donation;
+    content: $icon-donation; 
+  }
+}
+.icon-smoking {
+  &:before {
+    content: $icon-smoking; 
+  }
+}
+.icon-spa {
+  &:before {
+    content: $icon-spa; 
+  }
+}
+.icon-construction {
+  &:before {
+    content: $icon-construction; 
+  }
+}
+.icon-hairdresser {
+  &:before {
+    content: $icon-hairdresser; 
   }
 }
 .icon-at-sign {
   &:before {
-    content: $icon-at-sign;
+    content: $icon-at-sign; 
   }
 }
 .icon-bar-chart {
   &:before {
-    content: $icon-bar-chart;
+    content: $icon-bar-chart; 
+  }
+}
+.icon-book {
+  &:before {
+    content: $icon-book; 
   }
 }
 .icon-chevron-down {
   &:before {
-    content: $icon-chevron-down;
+    content: $icon-chevron-down; 
   }
 }
 .icon-chevron-left {
   &:before {
-    content: $icon-chevron-left;
+    content: $icon-chevron-left; 
   }
 }
 .icon-chevron-right {
   &:before {
-    content: $icon-chevron-right;
+    content: $icon-chevron-right; 
   }
 }
 .icon-chevron-up {
   &:before {
-    content: $icon-chevron-up;
+    content: $icon-chevron-up; 
   }
 }
 .icon-clock {
   &:before {
-    content: $icon-clock;
+    content: $icon-clock; 
   }
 }
 .icon-code {
   &:before {
-    content: $icon-code;
+    content: $icon-code; 
   }
 }
 .icon-coffee {
   &:before {
-    content: $icon-coffee;
+    content: $icon-coffee; 
   }
 }
 .icon-command {
   &:before {
-    content: $icon-command;
+    content: $icon-command; 
   }
 }
 .icon-download {
   &:before {
-    content: $icon-download;
+    content: $icon-download; 
   }
 }
 .icon-edit {
   &:before {
-    content: $icon-edit;
+    content: $icon-edit; 
+  }
+}
+.icon-folder-plus {
+  &:before {
+    content: $icon-folder-plus; 
   }
 }
 .icon-help-circle {
   &:before {
-    content: $icon-help-circle;
+    content: $icon-help-circle; 
   }
 }
 .icon-home {
   &:before {
-    content: $icon-home;
+    content: $icon-home; 
   }
 }
 .icon-key {
   &:before {
-    content: $icon-key;
+    content: $icon-key; 
   }
 }
 .icon-list {
   &:before {
-    content: $icon-list;
+    content: $icon-list; 
   }
 }
 .icon-lock {
   &:before {
-    content: $icon-lock;
+    content: $icon-lock; 
   }
 }
 .icon-log-in {
   &:before {
-    content: $icon-log-in;
+    content: $icon-log-in; 
   }
 }
 .icon-log-out {
   &:before {
-    content: $icon-log-out;
+    content: $icon-log-out; 
   }
 }
 .icon-pie-chart {
   &:before {
-    content: $icon-pie-chart;
+    content: $icon-pie-chart; 
+  }
+}
+.icon-plus {
+  &:before {
+    content: $icon-plus; 
   }
 }
 .icon-plus-square {
   &:before {
-    content: $icon-plus-square;
+    content: $icon-plus-square; 
   }
 }
 .icon-power {
   &:before {
-    content: $icon-power;
+    content: $icon-power; 
+  }
+}
+.icon-repeat {
+  &:before {
+    content: $icon-repeat; 
   }
 }
 .icon-save {
   &:before {
-    content: $icon-save;
+    content: $icon-save; 
   }
 }
 .icon-settings {
   &:before {
-    content: $icon-settings;
+    content: $icon-settings; 
   }
 }
 .icon-sliders {
   &:before {
-    content: $icon-sliders;
+    content: $icon-sliders; 
+  }
+}
+.icon-tag {
+  &:before {
+    content: $icon-tag; 
   }
 }
 .icon-trash {
   &:before {
-    content: $icon-trash;
+    content: $icon-trash; 
   }
 }
 .icon-user {
   &:before {
-    content: $icon-user;
+    content: $icon-user; 
   }
 }
 .icon-watch {
   &:before {
-    content: $icon-watch;
+    content: $icon-watch; 
   }
 }
